--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 # Binaries
 # /bin
 bin/Debug/GEngine/
-# bin/Debug/GEngineEditor/**.log
-# bin/Debug/GEngineEditor/**.exe
-# bin/Debug/GEngineEditor/**.pdb
+
 bin/Release/GEngine/
-# bin/Release/GEngineEditor/**.log
-# bin/Release/GEngineEditor/**.exe
-# bin/Release/GEngineEditor/**.pdb
 
 external/glad/bin/
-
-
+tools/*.bak
+**/__pycache__/ 
 
 bin-int/
 logs/
